assets/css/main.css
/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
@import 'https://fonts.googleapis.com/css?family=Allura|Merriweather+Sans:400,700,800';

html {
    font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    overflow-x: hidden
}

body {
    margin: 0;
    overflow-wrap: break-word;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
    display: block
}

audio,
canvas,
progress,
video {
    display: inline-block;
    vertical-align: baseline
}

audio:not([controls]) {
    display: none;
    height: 0
}

[hidden],
template {
    display: none
}

a {
    background-color: transparent
}

a:active,
a:hover {
    outline: 0
}

abbr[title] {
    border-bottom: 1px dotted
}

b,
strong {
    font-weight: bold
}

dfn {
    font-style: italic
}

h1 {
    font-size: 2em;
    margin: 0.67em 0
}

.services__heading {
    text-align: center;
    font-size: 6rem;
}

mark {
    background: #ff0;
    color: #000
}

small {
    font-size: 80%
}

sub,
sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline
}

sup {
    top: -0.5em
}

sub {
    bottom: -0.25em
}

img {
    border: 0
}

svg:not(:root) {
    overflow: hidden
}

figure {
    margin: 1em 40px
}

hr {
    box-sizing: content-box;
    height: 0
}

pre {
    overflow: auto
}

code,
kbd,
pre,
samp {
    font-family: monospace, monospace;
    font-size: 1em
}

button,
input,
optgroup,
select,
textarea {
    color: inherit;
    font: inherit;
    margin: 0
}

button {
    overflow: visible
}

button,
select {
    text-transform: none
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
    -webkit-appearance: button;
    cursor: pointer
}

button[disabled],
html input[disabled] {
    cursor: default
}

button::-moz-focus-inner,
input::-moz-focus-inner {
    border: 0;
    padding: 0
}

input {
    line-height: normal
}

input[type="checkbox"],
input[type="radio"] {
    box-sizing: border-box;
    padding: 0
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
    height: auto
}

input[type="search"] {
    -webkit-appearance: textfield;
    box-sizing: content-box
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
    -webkit-appearance: none
}

fieldset {
    border: 1px solid #c0c0c0;
    margin: 0 2px;
    padding: 0.35em 0.625em 0.75em
}

legend {
    border: 0;
    padding: 0
}

textarea {
    overflow: auto
}

optgroup {
    font-weight: bold
}

table {
    border-collapse: collapse;
    border-spacing: 0
}

td,
th {
    padding: 0
}

body {
    background-color: #fff;
    font-size: 14px;
    line-height: 1.6;
    font-family: "Merriweather Sans", sans-serif;
    color: #9e9e9e;
    -webkit-font-smoothing: antialiased;
    -webkit-text-size-adjust: 100%;
    overflow-x: hidden
}

.gigantic,
.huge,
.large,
.bigger,
.big,
h1,
h2,
h3,
h4,
h5,
h6 {
    color: #222;
    font-weight: bold
}

.gigantic {
    font-size: 110px;
    line-height: 1.09;
    letter-spacing: -2px
}

.huge,
h1 {
    font-size: 68px;
    line-height: 1.05;
    letter-spacing: -1px
}

.large,
h2 {
    font-size: 42px;
    line-height: 1.14
}

.bigger,
h3 {
    font-size: 26px;
    line-height: 1.38
}

.big,
h4 {
    font-size: 22px;
    line-height: 1.38
}

.small,
small {
    font-size: 10px;
    line-height: 1.2
}

p {
    margin: 0 0 20px 0
}

em {
    font-style: italic
}

strong {
    font-weight: bold
}

hr {
    border: solid #ddd;
    border-width: 1px 0 0;
    clear: both;
    margin: 10px 0 30px;
    height: 0
}

::-moz-selection {
    background: #FFF498
}

::selection {
    background: #FFF498
}

img::-moz-selection {
    background: transparent
}

img::selection {
    background: transparent
}

body {
    -webkit-tap-highlight-color: #FFF498
}

.no-margin {
    margin: 0
}

.no-padding {
    padding: 0
}

a {
    display: inline-block;
    color: #213571;
    text-decoration: none
}

ul,
ol {
    margin: 0;
    padding: 0;
    list-style: none
}

input,
textarea {
    outline: none
}

.bold {
    font-weight: 700
}

.italic {
    font-style: italic
}

.wrapper,
.wrapper--small,
.wrapper--large {
    position: relative;
    max-width: 90%;
    height: 100%;
    margin: 0 auto
}

.wrapper--small {
    /* width: 980px */
}

.wrapper--large {
    width: 1170px
}

.splashscreen {
    position: fixed;
    top: 0;
    left: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    height: 100%;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    background-color: #fff;
    z-index: 100;
    -webkit-transition: opacity .4s .4s;
    transition: opacity .4s .4s
}

.splashscreen--is-hidden {
    opacity: 0
}

.splashscreen--is-hidden .preloader {
    opacity: 0
}

.preloader {
    position: relative;
    width: 200px;
    height: 150px;
    -webkit-transition: opacity .4s;
    transition: opacity .4s
}

.preloader::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 45px;
    bottom: 0;
    border: 10px solid #213571;
    -webkit-animation: fadeInOut 1.6s linear infinite;
    animation: fadeInOut 1.6s linear infinite
}

.preloader__text {
    position: absolute;
    top: 50%;
    right: 0;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    padding: 10px 0;
    color: #585858;
    font-size: 32px;
    font-weight: 800;
    background-color: #fff
}

.logo {
    color: #585858;
    font-size: 34px;
    font-weight: 800;
    text-transform: uppercase
}

.transform-link {
    font-weight: 700
}
/* ... */

